--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uniswap",
   "description": "Uniswap Exchange Protocol",
   "version": "0.1.0",
-  "homepage": "https://uniswap.ch",
+  "homepage": "http://uniswap.ch",
   "private": true,
   "dependencies": {
     "@reach/dialog": "^0.2.8",
@@ -11,6 +11,7 @@
     "copy-to-clipboard": "^3.2.0",
     "escape-string-regexp": "^2.0.0",
     "ethers": "^4.0.33",
+    "gh-pages": "^2.1.1",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
@@ -26,6 +27,7 @@
     "react-scripts": "^3.0.1",
     "react-spring": "^8.0.20",
     "react-switch": "^5.0.1",
+    "serve": "^11.1.0",
     "styled-components": "^4.2.0",
     "web3-react": "^5.0.4"
   },
@@ -34,6 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "npm run build&&gh-pages -d build",
     "lint:base": "yarn eslint './src/**/*.{js,jsx}'",
     "format:base": "yarn prettier './src/**/*.{js,jsx,scss}'",
     "fix:lint": "yarn lint:base --fix",
