--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   },
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "prettier": "^1.17.0"
+    "husky": "^3.0.4",
+    "prettier": "^1.17.0",
+    "pretty-quick": "^1.11.1"
   }
 }
