Trying to fix url history

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uniswap",
   "description": "Uniswap Exchange Protocol",
   "version": "0.1.0",
-  "homepage": "http://uniswap.ch",
+  "homepage": "https://uniswap.ch",
   "private": true,
   "dependencies": {
     "@reach/dialog": "^0.2.8",
@@ -36,8 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "npm run build&&gh-pages -d build",
+    "predeploy": "PUBLIC_URL=https://uniswap.ch yarn run build",
+    "deploy": "gh-pages -d build",
     "lint:base": "yarn eslint './src/**/*.{js,jsx}'",
     "format:base": "yarn prettier './src/**/*.{js,jsx,scss}'",
     "fix:lint": "yarn lint:base --fix",
