--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uniswap",
   "description": "Uniswap Exchange Protocol",
   "version": "0.1.0",
-  "homepage": "http://uniswap.ch",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@reach/dialog": "^0.2.8",
