--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "deploy": "gh-pages -d build",
+    "predeploy": "yarn run build",
     "eject": "react-scripts eject",
     "lint:base": "yarn eslint './src/**/*.{js,jsx}'",
     "format:base": "yarn prettier './src/**/*.{js,jsx,scss}'",
