--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,12 @@
+
 # support SPA setup
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.environment]
+  REACT_APP_IS_PRODUCTION_DEPLOY = "false"
+
+[context.production.environment]
+  REACT_APP_IS_PRODUCTION_DEPLOY = "true"
