--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uniswap",
   "description": "Uniswap Exchange Protocol",
   "version": "0.1.0",
-  "homepage": "https://uniswap.exchange",
+  "homepage": "https://uniswap.ch",
   "private": true,
   "dependencies": {
     "@reach/dialog": "^0.2.8",
@@ -18,6 +18,7 @@
     "copy-to-clipboard": "^3.2.0",
     "escape-string-regexp": "^2.0.0",
     "ethers": "^4.0.44",
+    "gh-pages": "^2.2.0",
     "history": "^4.9.0",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
