--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ethers": "^4.0.44",
     "gh-pages": "^2.2.0",
     "history": "^4.9.0",
+    "husky": "^4.2.1",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
